[gd_scene load_steps=5 format=3 uid="uid://d32yummmyhpuj"]

[ext_resource type="Texture2D" uid="uid://c1mwbw0kon1tr" path="res://assets/textures/shadow.png" id="1_2d61f"]
[ext_resource type="Script" uid="uid://bqsx6gqpyi3ma" path="res://scripts/interactable/job_board.gd" id="1_hggwc"]
[ext_resource type="Texture2D" uid="uid://cj41wridn4hq7" path="res://assets/textures/job_board.png" id="1_rtq55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tkwf6"]
size = Vector2(56, 28)

[node name="JobBoard" type="Area2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_hggwc")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-30, -0.5)
scale = Vector2(0.5288462, 0.46153846)
texture = ExtResource("1_2d61f")

[node name="Shadow2" type="Sprite2D" parent="."]
position = Vector2(30.000015, -0.5)
scale = Vector2(0.52884626, 0.46153846)
texture = ExtResource("1_2d61f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_rtq55")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_tkwf6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
